argocd/moiming-prod/moiming-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moiming-server
  labels:
    app: moiming-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moiming-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: moiming-server
    spec:
      serviceAccountName: moiming-server-prod
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - image: yny.ocir.io/ax1dvc8vmenm/moiming-prod/moiming-server:1
          name: moiming-server
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 384Mi
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: moiming-server
spec:
  type: ClusterIP
  selector:
    app: moiming-server
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: moiming-server
spec:
  gateways:
    - istio-ingress/waffle-ingressgateway
    - mesh
  hosts:
    - api.moiming.wafflestudio.com
  http:
    - name: "prod-moiming-server-route"
      timeout: 10s
      route:
        - destination:
            host: moiming-server
      corsPolicy:
        allowHeaders:
          - "*"
        allowMethods:
          - POST
          - GET
          - PUT
          - PATCH
          - DELETE
          - OPTIONS
        allowCredentials: true
        allowOrigins:
          - exact: "https://moiming.wafflestudio.com"
